[package]
name = "robocap"
version = "0.1.1"
edition = "2021"
publish = false

[lib]

[dependencies]
shuttle-service = { version = "0.11.0", features = ["bot-serenity"] }
anyhow = "1.0.65"
serde = "1.0"
serenity = { version = "0.11.5", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
shuttle-secrets = "0.11.0"
tracing = "0.1.37"
reqwest = "0.11.12"
shuttle-shared-db = { version = "0.11.0", features = ["postgres"] }
sqlx = { version = "0.6.1", features = ["runtime-tokio-native-tls", "postgres"] }
